--- a/templates/user/_delete_form.html.twig
+++ b/templates/user/_delete_form.html.twig
@@ -1,5 +1,5 @@
-<form method="post" action="{{ path('user_delete', {'id': app.user.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('user_delete', {'id': app.user.id}) }}" onsubmit="return confirm('Etes vous sûr de vouloir supprimer cette fiche?');">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ app.user.id) }}">
-    <button class="btn">Delete</button>
+    <button class="btn btn-sm">Supprimer</button>
 </form>
