--- a/templates/stock/_delete_form.html.twig
+++ b/templates/stock/_delete_form.html.twig
@@ -1,5 +1,5 @@
-<form method="post" action="{{ path('stock_delete', {'id': stock.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('stock_delete', {'id': stock.id}) }}" onsubmit="return confirm('Etes vous sûr de vouloir supprimer cette fiche?');">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ stock.id) }}">
-    <button class="btn">Supprimer</button>
+    <button class="btn btn-sm"><i class="fa fa-trash-o"></i></button>
 </form>
