--- a/templates/review/index.html.twig
+++ b/templates/review/index.html.twig
@@ -3,15 +3,15 @@
 {% block title %}Review index{% endblock %}
 
 {% block body %}
-    <h1>Review index</h1>
+    <h1 class="my-5" >Liste des avis</h1>
 
     <table class="table">
         <thead>
             <tr>
                 <th>Id</th>
-                <th>Rating</th>
-                <th>Comment</th>
-                <th>actions</th>
+                <th>Note</th>
+                <th>Commentiare</th>
+                <th>Actions</th>
             </tr>
         </thead>
         <tbody>
