--- a/templates/review/show.html.twig
+++ b/templates/review/show.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Review{% endblock %}
 
 {% block body %}
-<h1>Review</h1>
+<h1 class="my-5">Vos avis</h1>
 
 <table class="table table-dark">
     <thead>
