--- a/templates/_partials/navbar.html.twig
+++ b/templates/_partials/navbar.html.twig
@@ -1,9 +1,12 @@
 <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">
-            <img src="{{ asset('assets/img/Logo ferme 2.svg') }}" alt="logo" height="180px" data-toggle="modal"></img>
-        </a>
-    <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
-aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></button>
+    <a class="navbar-brand" href="{{ path('app_index')}}">
+        <img src="{{ asset('assets/img/Logo ferme 2.svg') }}" alt="logo" height="180px" data-toggle="modal"></img>
+    </a>
+
+    <h3 class="ml-0 mr-5 pl-0">LA MAIN VERTE</h3>
+    <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId"
+        aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation"><span
+            class="navbar-toggler-icon"></button>
 
     <div class="collapse navbar-collapse" id="collapsibleNavId">
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
@@ -14,53 +17,53 @@ aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler
 
             {% if app.user %}
 
-                <li class="nav-item">
-                    <a class="nav-item nav-link" href="#">Bienvenue {{app.user.username}}!</a>
-                </li>
+            <li class="nav-item">
+                <a class="nav-item nav-link" href="#">Bienvenue {{app.user.username}}!</a>
+            </li>
 
-                {% if is_granted ("ROLE_CLIENT") %}
-                    <li class="nav-item">
-                        <a class="nav-item nav-link" href="{{ path('profil_index') }}">Mon compte</a>
-                    </li>
-                {% endif %}
+            {% if is_granted ("ROLE_CLIENT") %}
+            <li class="nav-item">
+                <a class="nav-item nav-link" href="{{ path('profil_index') }}">Mon compte</a>
+            </li>
+            {% endif %}
 
-                {% if is_granted ("ROLE_PRODUCTEUR") %}
-                    <li class="nav-item">
-                        <a class="nav-item nav-link" href="{{ path('profil_index') }}">Ma ferme</a>
-                    </li>
-                {% endif %}
+            {% if is_granted ("ROLE_PRODUCTEUR") %}
+            <li class="nav-item">
+                <a class="nav-item nav-link" href="{{ path('profil_index') }}">Ma ferme</a>
+            </li>
+            {% endif %}
 
-                {% if is_granted ("ROLE_ADMIN") %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ path('user_gestion') }}">Gestion des données</a>
-                    </li>
-                {# {% else %}
+            {% if is_granted ("ROLE_ADMIN") %}
+            <li class="nav-item">
+                <a class="nav-link" href="{{ path('user_gestion') }}">Gestion des données</a>
+            </li>
+            {# {% else %}
                     <li class="nav-item">
                         <a class="nav-item nav-link" href="#">Supprimer mon compte</a>
                     </li> #}
-                {% endif %}
+            {% endif %}
 
-                {% if is_granted("ROLE_ADMIN") == false %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Nous contacter</a>
-                    </li>
-                {% endif %}
+            {% if is_granted("ROLE_ADMIN") == false %}
+            <li class="nav-item">
+                <a class="nav-link" href="#">Nous contacter</a>
+            </li>
+            {% endif %}
 
-                <li class="nav-item">
-                    <a class="nav-item nav-link" href="{{ path('app_logout') }}">Déconnexion</a>
-                </li>
+            <li class="nav-item">
+                <a class="nav-item nav-link" href="{{ path('app_logout') }}">Déconnexion</a>
+            </li>
 
             {% else %}
 
-                <li class="nav-item">
-                    <a class="nav-item nav-link" href="{{ path('app_login') }}">Se connecter</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-item nav-link" href="{{ path('app_register') }}">Créer un compte</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ path('contact_new')}}">Nous contacter</a>
-                </li>
+            <li class="nav-item">
+                <a class="nav-item nav-link" href="{{ path('app_login') }}">Se connecter</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-item nav-link" href="{{ path('app_register') }}">Créer un compte</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{{ path('contact_new')}}">Nous contacter</a>
+            </li>
 
             {% endif %}
 
