--- a/templates/company/found.html.twig
+++ b/templates/company/found.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 
-<h1>Votre recherche a généré {{users|length}} résultat(s)</h1>
+<h1 class="mt-4">Votre recherche a généré {{users|length}} résultat(s)</h1>
 
 {% for user in users %}
 
