--- a/templates/company/show.html.twig
+++ b/templates/company/show.html.twig
@@ -6,9 +6,9 @@
 
 {# Affichage infos producteur #}
 
-<h1>{{company.name}}</h1>
+<h1 class="my-4">{{company.name}}</h1>
 
-<div class="card mb-3">
+<div class="card mb-3 p-3">
     <img src="{{ asset('assets/img/etalage primeur.jpg') }}" class="card-img-top" style="height: 80px; width: 100px;"
         alt="...">
     <div class="card-body">
@@ -17,7 +17,7 @@
     </div>
 </div>
 
-<h4>Liste des produits</h4>
+<h4 class="my-4">Liste des produits</h4>
 
 <table class="table table-dark">
     <thead>
@@ -79,7 +79,7 @@
 
 {# Affichage commentaires producteur #}
 
-<table class="table table-striped">
+<table class="table table-striped my-4">
     <thead>
         <tr>
             <th scope="col">Notes</th>
@@ -102,13 +102,6 @@
 
 
 {{ include('review/_form.html.twig') }}
-
-
-<a href="{{ path('company_index') }}">back to list</a>
-
-{# <a class="btn btn-primary" href="{{ path('company_edit', {'id': company.id}) }}">edit</a> #}
-
-{# {{ include('company/_delete_form.html.twig') }} #}
 
 
 {% endblock %}
