--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Contact index{% endblock %}
 
 {% block body %}
-    <h1>Contact index</h1>
+    <h1 class="my-5" >Messages reçus</h1>
 
     <table class="table">
         <thead>
@@ -12,6 +12,7 @@
                 <th>Prénom</th>
                 <th>Nom</th>
                 <th>Email</th>
+                <th>Message</th>
             </tr>
         </thead>
         <tbody>
@@ -21,6 +22,7 @@
                 <td>{{ contact.firstname }}</td>
                 <td>{{ contact.lastname }}</td>
                 <td>{{ contact.email }}</td>
+                <td>{{ contact.content }}</td>
             </tr>
         {% else %}
             <tr>
