--- a/templates/drive/index.html.twig
+++ b/templates/drive/index.html.twig
@@ -3,9 +3,12 @@
 {% block title %}Drive index{% endblock %}
 
 {% block body %}
-    <h1>Drive index</h1>
+    <h1 class="my-5" >Ajouter un point relais</h1>
 
-{{ include('product/_form.html.twig') }}
+    {{ include('drive/_form.html.twig') }}
+
+    <h1 class="my-5" >Liste des points relais</h1>
+
 
     <table class="table">
         <thead>
@@ -30,5 +33,4 @@
         </tbody>
     </table>
 
-    <a href="{{ path('drive_new') }}">Create new</a>
 {% endblock %}
