--- a/templates/stock/new.html.twig
+++ b/templates/stock/new.html.twig
@@ -3,9 +3,10 @@
 {% block title %}Nouveau Stock{% endblock %}
 
 {% block body %}
-    <h1>Créez un nouveau stock</h1>
+    <h1 class="my-5">Créez un nouveau stock</h1>
 
     {{ include('stock/_form.html.twig') }}
 
-    <a href="{{ path('stock_index') }}">back to list</a>
+    <div class="my-5"><a href="{{ path('profil_index') }}">Retour</a></div>
+    
 {% endblock %}
