--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -3,10 +3,11 @@
 {% block title %}User index{% endblock %}
 
 {% block body %}
-<h1>Liste des utilisateurs</h1>
+<h1 class="my-5">Liste des utilisateurs</h1>
+
 <form action="{{ path('user_modify_role')}}" method="POST">
 
-    <button type="submit">Enregistrer les modifications</button>
+    <button class="mb-3" type="submit">Enregistrer les modifications</button>
 
     <table class="table">
         <thead>
