--- a/templates/user/profil.html.twig
+++ b/templates/user/profil.html.twig
@@ -7,16 +7,16 @@
 {% if is_granted ("ROLE_CLIENT") %}
 
 
-<div class="my-4">
+<div class="my-5">
     <h2> Bienvenue sur votre Espace Client </h2>
 </div>
 
-<div class="my-4">
+<div class="my-5">
     <img src="{{ asset('assets/img/user_photo/' ~ app.user.photo ) }}" height="180px" alt="Photo Utilisateur"></img>
 
 </div>
 
-<div class="my-4">
+<div class="my-5">
     <h5>Petit récapitulatif de vos informations client : </h5>
 </div>
 
@@ -31,18 +31,18 @@
     <li class="list-group-item"><strong>N° téléphone :</strong> {{app.user.phone}}</li>
 </ul>
 
-<div class="my-4">
+<div class="my-5">
     <a href="{{ path('profil_edit', {user:app.user.id}) }}"><button>Modifier mes informations</button></a>
 </div>
 
 
-<div class="my-4">
+<div class="my-5">
     <h5>Vos dernières commandes : </h5>
 </div>
 
 
 
-<div class="my-4">
+<div class="my-5">
 
     <table class="table table-striped">
         <thead>
@@ -71,7 +71,7 @@
 
 
 
-<div class="my-4">
+<div class="my-5">
     <button>Supprimer mon compte</button>
 </div>
 
@@ -79,143 +79,161 @@
 
 {% if is_granted ("ROLE_PRODUCTEUR") %}
 
-<div class="my-4">
+<div class="my-5">
     <h2> Bienvenue sur votre Espace Producteur</h2>
 </div>
 
 
-<div class="my-4">
+<div class="my-5">
     <img src="{{ asset('assets/img/user_photo/' ~ app.user.photo ) }}" height="180px" alt="Photo Utilisateur"></img>
 </div>
 
-<div class="my-4">
-    <h5>Petit récapitulatif de vos informations Producteur :</h5>
+<div class="my-5">
+    <h5>Petit récapitulatif de vos informations :</h5>
 </div>
 
-<div class="my-4">
-    <table>
-        <tr>
-            <th>Nom de la Société</th>
-            <th>N° SIRET</th>
-            <th>Nom</th>
-            <th>Prénom</th>
-            <th>Email</th>
-            <th>Adresse</th>
-            <th>Complément d'adresse</th>
-            <th>Code Postal</th>
-            <th>Ville</th>
-            <th>Telephone</th>
-        </tr>
-        <tr>
-            <td>{{app.user.company.name}}</td>
-            <td>{{app.user.company.siret}}</td>
-            <td>{{app.user.lastname}}</td>
-            <td>{{app.user.firstname}}</td>
-            <td>{{app.user.email}}</td>
-            <td>{{app.user.address.line}}</td>
-            <td>{{app.user.address.line2}}</td>
-            <td>{{app.user.address.zipcode}}</td>
-            <td>{{app.user.address.city}}</td>
-            <td>{{app.user.phone}}</td>
-        </tr>
+<div class="my-5">
+
+    <table class="table">
+        <thead>
+            <tr>
+                <th>Nom de la Société</th>
+                <th>N° SIRET</th>
+                <th>Nom</th>
+                <th>Prénom</th>
+                <th>Email</th>
+                <th>Adresse</th>
+                <th>Complément d'adresse</th>
+                <th>Code Postal</th>
+                <th>Ville</th>
+                <th>Telephone</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>{{app.user.company.name}}</td>
+                <td>{{app.user.company.siret}}</td>
+                <td>{{app.user.lastname}}</td>
+                <td>{{app.user.firstname}}</td>
+                <td>{{app.user.email}}</td>
+                <td>{{app.user.address.line}}</td>
+                <td>{{app.user.address.line2}}</td>
+                <td>{{app.user.address.zipcode}}</td>
+                <td>{{app.user.address.city}}</td>
+                <td>{{app.user.phone}}</td>
+            </tr>
+        </tbody>
     </table>
+
 </div>
 
-<div class="my-4">
-    <a href="{{ path('profil_edit', {user:app.user.id}) }}"><button>Modifier mes informations</button></a>
+<div class="my-5">
+    <a href="{{ path('profil_edit', {user:app.user.id}) }}"><button class="btn btn-secondary">Modifier mes
+            informations</button></a>
 </div>
 
-<div class="my-4">
+<div class="my-5">
     <a href="{{ path('review_company')}}">Consulter les avis</a>
 </div>
 
-<p>
+<hr>
 
-<div class="my-4">
+<div class="my-5">
     <h5>Mon stock de produits : </h5>
 </div>
 
-<div class="my-4">
-    <table>
-        <tr>
-            <th>Nom du Produit</th>
-            <th>Catégorie</th>
-            <th>Quantité</th>
-            <th>Prix Unitaire</th>
-            <th>Modifier</th>
-            <th>Supprimer</th>
+<div class="my-5">
 
-        </tr>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>Nom du Produit</th>
+                <th>Catégorie</th>
+                <th>Quantité</th>
+                <th>Prix Unitaire</th>
+                <th>Modifier</th>
+                <th>Supprimer</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for stock in stocks %}
 
-        {% for stock in stocks %}
+            <tr>
+                <td>{{stock.product.name}}</td>
+                <td>{{stock.product.category.name}}</td>
+                <td>{{stock.quantity}}</td>
+                <td>{{stock.price}}</td>
+                <td><a href="{{ path('stock_edit', {id: stock.id}) }}"><button>Modifier</button></a></td>
+                <td>{{ include('stock/_delete_form.html.twig') }}</td>
+                {# <td><a href="{{ path('stock_delete', {id: stock.id}) }}"><button>Supprimer</button></a></td> #}
+            </tr>
 
-        <tr>
-            <td>{{stock.product.name}}</td>
-            <td>{{stock.product.category.name}}</td>
-            <td>{{stock.quantity}}</td>
-            <td>{{stock.price}}</td>
-            <td><a href="{{ path('stock_edit', {id: stock.id}) }}"><button>Modifier</button></a></td>
-            <td>{{ include('stock/_delete_form.html.twig') }}</td>
-            {# <td><a href="{{ path('stock_delete', {id: stock.id}) }}"><button>Supprimer</button></a></td> #}
-        </tr>
-        {% endfor %}
+            {% endfor %}
+        </tbody>
     </table>
+
 </div>
 
 {% if app.user.company.validated %}
 
-<div class="my-4"><a href="{{ path('stock_new')}}"><button>Ajouter un stock</button></a></div>
+<div class="my-5"><a href="{{ path('stock_new')}}"><button class="btn btn-secondary">Ajouter un stock</button></a></div>
 
 {% else %}
-<div class="my-4"><a href="{{ path('stock_new')}}"><button disabled>Ajouter un stock</button></a></div>
+<div class="my-5"><a href="{{ path('stock_new')}}"><button class="btn btn-secondary" disabled>Ajouter un
+            stock</button></a></div>
 
 {% endif %}
 
+<hr>
 
-<div class="my-4">
+<div class="my-5">
     <h5>Liste des points Relais : </h5>
 </div>
 
-<div class="my-4">
-    <table>
-        <tr>
-            <th>Nom du Point Relais</th>
-            <th>Adresse</th>
-            <th>Complément d'adresse</th>
-            <th>Code Postal</th>
-            <th>Ville</th>
-            <th>Modifier</th>
-            <th>Supprimer</th>
+<div class="my-5">
+
+    <table class="table">
+        <thead>
+            <tr>
+                <th>Nom du Point Relais</th>
+                <th>Adresse</th>
+                <th>Complément d'adresse</th>
+                <th>Code Postal</th>
+                <th>Ville</th>
+                <th>Modifier</th>
+                <th>Supprimer</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for drive in drives %}
+
+            <tr>
+                <td>{{ drive.name}}</td>
+                <td>{{ drive.address.line }}</td>
+                <td>{{ drive.address.line2 }}</td>
+                <td>{{ drive.address.zipcode }}</td>
+                <td>{{ drive.address.city }}</td>
+                <td><a href="{{ path('drive_edit', {id: drive.id})  }}"><button>Modifier</button></a></td>
+                <td>{{ include('drive/_delete_form.html.twig') }}</td>
 
 
-        </tr>
 
-        {% for drive in drives %}
+            </tr>
 
-        <tr>
-            <td>{{ drive.name}}</td>
-            <td>{{ drive.address.line }}</td>
-            <td>{{ drive.address.line2 }}</td>
-            <td>{{ drive.address.zipcode }}</td>
-            <td>{{ drive.address.city }}</td>
-            <td><a href="{{ path('drive_edit', {id: drive.id})  }}"><button>Modifier</button></a></td>
-            <td>{{ include('drive/_delete_form.html.twig') }}</td>
-
-
-
-        </tr>
-
-        {% endfor %} 
-
+            {% endfor %}
+        </tbody>
     </table>
+
 </div>
 
 {% if app.user.company.validated %}
 
-<div class="my-4"><a href="{{ path('drive_new')}}"><button>Ajouter un point relais</button></a></div>
+<div class="my-5"><a href="{{ path('drive_new')}}"><button class="btn btn-secondary">Ajouter un point
+            relais</button></a></div>
 
 {% else %}
-<div class="my-4"><a href="{{ path('drive_new')}}"><button disabled>Ajouter un point relais</button></a></div>
+<div class="my-5"><a href="{{ path('drive_new')}}"><button class="btn btn-secondary" disabled>Ajouter un point
+            relais</button></a></div>
 
 {% endif %}
 
