--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -7,7 +7,7 @@
 
     {{ include('user/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
 
-    <a href="{{ path('profil_index') }}">Retour au profil</a>
+    <a class="btn btn-sm btn-secondary my-2" href="{{ path('profil_index') }}">Retour au profil</a>
 
 {% endblock %}
 
