--- a/templates/company/show.html.twig
+++ b/templates/company/show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Company{% endblock %}
+{% block title %}Producteur{% endblock %}
 
 {% block body %}
 
@@ -8,19 +8,28 @@
 
 <h1>{{company.name}}</h1>
 
-<div class="card mb-3">
-    <img src="{{ asset('assets/img/etalage primeur.jpg') }}" class="card-img-top" style="height: 80px; width: 100px;"
-        alt="...">
-    <div class="card-body">
-        <h5>{{company.averageRating|round(1, 'floor')}}{% if company.averageRating is not null %}/10{% endif %}</h5>
-        <p class="card-text">{{company.description}}</p>
+<div class="container">
+    <div class="row">
+        <div class="col-8">
+            <img src="{{ asset('assets/img/etalage primeur.jpg') }}" class="card-img-top" style="height: 80px; width: 100px;"
+            <hr>
+            <p class="card-text">{{company.description}}</p>
+        </div>
+        <div class="col-4">
+            {% if company.averageRating is not null %}
+            <h5>Ce producteur est noté {{company.averageRating|round(1, 'floor')}}/10</h5>
+            {% else %}
+            <h5>Soyez le premier à donner votre avis</h5>
+            {% endif %}
+        </div>
     </div>
 </div>
 
+<hr class="my-2">
 <h4>Liste des produits</h4>
 
-<table class="table table-dark">
-    <thead>
+<table class="table">
+    <thead class="table bg-secondary">
         <tr>
             <th scope="col">Produits</th>
             <th scope="col">Quantités dispos</th>
@@ -78,9 +87,11 @@
 
 
 {# Affichage commentaires producteur #}
+<hr class="my-2">
+<h4>Liste des avis</h4>
 
-<table class="table table-striped">
-    <thead>
+<table class="table">
+    <thead class="table bg-secondary">
         <tr>
             <th scope="col">Notes</th>
             <th scope="col">Commentaires</th>
@@ -99,16 +110,9 @@
 
     </tbody>
 </table>
-
-
 {{ include('review/_form.html.twig') }}
 
-
-<a href="{{ path('company_index') }}">back to list</a>
-
-{# <a class="btn btn-primary" href="{{ path('company_edit', {'id': company.id}) }}">edit</a> #}
-
-{# {{ include('company/_delete_form.html.twig') }} #}
-
+<hr class="my-2">
+<a class="btn btn-sm btn-secondary my-2" href="{{ path('company_index') }}">Retour liste</a>
 
 {% endblock %}
