--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Register{% endblock %}
+{% block title %}Création compte{% endblock %}
 
 {% block body %}
     {% for flashError in app.flashes('verify_email_error') %}
