--- a/templates/review/_form.html.twig
+++ b/templates/review/_form.html.twig
@@ -1,4 +1,4 @@
 {{ form_start(form) }}
     {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+    <button class="btn btn-sm btn-primary my-2">{{ button_label|default('Enregistrer cette note') }}</button>
 {{ form_end(form) }}
