--- a/templates/_partials/navbar.html.twig
+++ b/templates/_partials/navbar.html.twig
@@ -15,7 +15,7 @@ aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler
             {% if app.user %}
 
                 <li class="nav-item">
-                    <a class="nav-item nav-link" href="#">Bienvenue {{app.user.username}}!</a>
+                    <a class="nav-item nav-link" href="{{ path('profil_index') }}">Bienvenue {{app.user.firstname}} {{app.user.lastname}} </a>
                 </li>
 
                 {% if is_granted ("ROLE_CLIENT") %}
@@ -42,7 +42,7 @@ aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler
 
                 {% if is_granted("ROLE_ADMIN") == false %}
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Nous contacter</a>
+                        <a class="nav-link" href="{{ path('contact_new') }}">Nous contacter</a>
                     </li>
                 {% endif %}
 
@@ -59,7 +59,7 @@ aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler
                     <a class="nav-item nav-link" href="{{ path('app_register') }}">Créer un compte</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ path('contact_new')}}">Nous contacter</a>
+                    <a class="nav-link" href="{{ path('contact_new') }}">Nous contacter</a>
                 </li>
 
             {% endif %}
