--- a/templates/company/show.html.twig
+++ b/templates/company/show.html.twig
@@ -31,35 +31,38 @@
 <table class="table">
     <thead class="table bg-secondary">
         <tr>
-            <th scope="col">Produits</th>
-            <th scope="col">Quantités dispos</th>
-            <th scope="col">Prix unitaire</th>
-            <th scope="col">Ajouter au panier</th>
-            <th scope="col">Retirer du panier</th>
+            <th>Produits</th>
+            <th>Quantités dispos</th>
+            <th>Prix unitaire</th>
+            <th colspan="2">Ajouter au panier</th>
+            <th>Retirer du panier</th>
         </tr>
     </thead>
     <tbody>
-            {% for stock in stocks %}
+            {% for cart in carts %}
                 <tr>
                     {# {% if stock.description == "" %} #}
-                        <td>{{ stock.product.name}}</td>
+                        <td>{{ cart.stock.product.name}}</td>
                     {# {% else %} #}
                         {# <td>{{ stock.description }}</td> #}
                     {# {% endif %} #}
-                    {% if stock.quantity == 0 %}
+                    {% if cart.stock.quantity == 0 %}
                         <td><i>épuisé</i></td>
                     {% else %}                        
-                        <td>{{ stock.quantity }} {{ stock.conditioning }}</td>
+                        <td>{{ cart.stock.quantity }} {{ cart.stock.conditioning }}</td>
                     {% endif %}
-                    <td>{{ stock.price }} €</td>
-                    {% if stock.quantity == 0 %}
+                    <td>{{ cart.stock.price }} €</td>
+                    {% if cart.stock.quantity == 0 %}
                     <td colspan="2"> </td>
                     {% else %}
                     <td>
-                        <a href="{{ path('cart_add', {'id': stock.id}) }}"><i class="fa fa-cart-plus" style='font-size:24px'></i></a>
+                        <a href="{{ path('cart_add', {'id': cart.stock.id}) }}"><i class="fa fa-cart-plus" style='font-size:24px'></i></a>
                     </td>
                     <td>
-                        <a href="{{ path('cart_remove', {'id': stock.id}) }}"><i class="fa fa-trash-o" style='font-size:24px'></i></a>
+                       {% if cart.quantity > 0 %} {{cart.quantity}} {% endif %}
+                    </td>
+                    <td>
+                        <a href="{{ path('cart_remove', {'id': cart.stock.id}) }}"><i class="fa fa-trash-o" style='font-size:24px'></i></a>
                     </td>
                     {% endif %}
                 </tr>
